--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
             questions: [
                 { q: "🎤 Chủ nhân bài 'Baby' huyền thoại là ai? ", a: ["bieber", "justin bieber"], char: "B" },
                 { q: "🌻 Post Malone có bài gì về loài hoa ĐVL rất thích? ", a: ["sunflower"], char: "O" },
-                { q: "😢 Người ở bên ĐVL hơn 10 năm nay, lúc vui lúc buồn? (MU / Manchester United / viết tắt)", a: ["mu", "manchester united"], char: "M" },
+                { q: "😢 Người ở bên ĐVL hơn 10 năm nay, lúc vui lúc buồn? ", a: ["mu", "manchester united"], char: "M" },
                 { q: "🎙️ Phúc Du rap: '... chối nhẹ nhàng thôi'. Điền từ còn thiếu?", a: ["từ"], char: "T" },
                 { q: "🔊 Rapper nào thường kết hợp với Masew ?", a: ["bray", "b ray"], char: "B" },
-                { q: "💰 Thứ em mong chờ mòn mỏi gần đây? (lương / tiền lương / lương tháng)", a: ["lương", "tiền lương"], char: "L" },
+                { q: "💰 Thứ em mong chờ mòn mỏi gần đây? ", a: ["lương", "tiền lương"], char: "L" },
                 { q: "🔤 Chữ cái cuối cùng trong tên 'Phạm Anh Duy'?", a: ["y"], char: "Y" }
             ],
             finalMsg: "🧩 <b style='font-size:2rem;'>B · O · M · T · B · L · Y</b><br><br>💌 <span style='background:#ffe0e5; padding:12px; display:inline-block; border-radius:30px;'>BẠN ƠI MÌNH THÍT BẠN LẮM Ý</span> 💌"
