--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💘 Gửi Đinh Vũ Lâm 💘</title>
+    <title>💘 Gift from Đinh Vũ Lâm 💘</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
@@ -407,7 +407,7 @@
             if (currentSet === dataSet2 && currentIndex === 2) {
                 // Nếu nhập "robber" mà KHÔNG có "hustlang"
                 if (input.includes("robber") && !input.includes("hustlang")) {
-                    showNotice("🫣 GẦN ĐÚNG RỒI!", "Bạn ơi gần đúng rồi á, thiếu 1 cái họ nữa thoi là đầy đủ họ và tên rồi! 😜");
+                    showNotice("😙 GẦN ĐÚNG RỒI!", "Bạn ơi gần đúng rồi á, thiếu 1 cái họ nữa thoi là đầy đủ họ và tên rồi! 😜");
                     return; // Dừng lại, không kiểm tra tiếp
                 }
             }
